# metatheory

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  rocq-kip-core.opam
.github/workflows/: ci.yml
theories/: Dynamic.v  DynamicFacts.v  Elaboration.v  Formalization.v  Soundness.v  Static.v  StaticFacts.v  Syntax.v
